# Metrik

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/providers/: mod.rs  nvml_provider.rs  sysinfo_provider.rs
src/background/: BackgroundLayer.tsx
src/editor/: BackgroundPicker.tsx  DraggableWidget.tsx  PropertyPanel.tsx  Toolbar.tsx  WidgetPalette.tsx
src/hooks/: useMetrics.ts
src/layouts/: compact.json  default-widgets.ts  full-panel.json
src/mods/: README.md
src/providers/: MetricsContext.tsx
src/styles/: global.css
src/themes/: cyberpunk.json  ember.json  minimal.json
src/widgets/: CardWidget.tsx  ClockWidget.tsx  GaugeWidget.tsx  SparklineWidget.tsx  TextWidget.tsx  WidgetRenderer.tsx  widget-registry.ts
